--- a/ybk/templates/frontend/index.html
+++ b/ybk/templates/frontend/index.html
@@ -12,7 +12,7 @@
             <p>
                 <a class="btn btn-lg btn-primary" href="{{ url_for('frontend.walkthrough') }}" role="button">查看开户攻略 »</a>
                 &nbsp;
-                <a class="btn btn-lg btn-primary" href="{{ url_for('frontend.forum') }}" role="button">交流炒邮币卡心得 »</a>
+                <a class="btn btn-lg btn-primary" href="{{ url_for('frontend.announcement_calendar') }}" role="button">查看申购日历 »</a>
             </p>
           </div>
 
