--- a/ybk/templates/frontend/announcement.html
+++ b/ybk/templates/frontend/announcement.html
@@ -13,14 +13,7 @@
 
 {% block main %}
   <div class="row">
-    <div class="col-md-2">
-      <ul class="nav nav-pills nav-stacked" role="tablist">
-        <li role="presentation" {% if tab == 'raw' %}class="active"{% endif %}><a href="{{ url_for('frontend.announcement_raw') }}" aria-controls="info">公告原文</a></li>
-        <li role="presentation" {% if tab == 'collection' %}class="active"{% endif %}><a href="{{ url_for('frontend.announcement_collection') }}" aria-controls="collection" >交易品种</a></li>
-      </ul>
-    </div>
-    <div class="col-md-10">
-      {% if tab == "raw" %}
+    <div class="col-md-12">
         <h2>
             公告信息聚合
         </h2> 
@@ -38,8 +31,8 @@
           <!-- 已选中 -->
           {% if type_ or exchange %}
           <div class="filter row">
-            <span class="name col-md-2">已选条件:</span>
-            <ul class="values col-md-10">
+            <span class="name col-md-1">已选条件:</span>
+            <ul class="values col-md-11">
               {% if type_ %}
                 <li class="selected">
                   <a href="#" data-type="type" data-value="">
@@ -56,7 +49,7 @@
                   </a>
                 </li>
               {% endif %}
-              <a class="pull-right" href="{{ url_for('frontend.announcement_raw') }}">全部撤销</a>
+              <a class="pull-right" href="{{ url_for('frontend.announcement') }}">全部撤销</a>
             </ul>
           </div>
           {% endif %}
@@ -67,8 +60,8 @@
                    ['交易所', 'exchange', exchange, exchanges],] %}
           {% if not fvalue %}
           <div class="filter row">
-            <span class="name col-md-2">{{ fname }}:</span>
-            <ul class="values col-md-10">
+            <span class="name col-md-1">{{ fname }}:</span>
+            <ul class="values col-md-11">
             {% for choice in fchoices %}
               <li><a href="#" 
                      data-type="{{ ftype }}" 
@@ -102,8 +95,8 @@
           <tbody>
           {% for a in announcements %}
             <tr>
-              <td><a href="{{ url_for('frontend.announcement_raw', exchange=a.exchange) }}">{{ a.exchange }}</a></td>
-              <td><a href="{{ url_for('frontend.announcement_raw', type=a.type_) }}">{{ a.typecn }}</a></td>
+              <td><a href="{{ url_for('frontend.announcement', exchange=a.exchange) }}">{{ a.exchange }}</a></td>
+              <td><a href="{{ url_for('frontend.announcement', type=a.type_) }}">{{ a.typecn }}</a></td>
               <td>
                 <a href="{{ a.url }}" target="_blank">
                   {{ a.title }}
@@ -149,39 +142,6 @@
             {% endif %}
           </ul>
         </nav>
-      {% elif tab == "collection" %}
-
-
-        <h2>交易品种</h2>
-        <table id="collection-list" class="table"
-                data-toggle="table"
-                data-classes="table table-condensed"
-                data-locale="zh-CN"
-                data-sort-name="offers_at"
-                data-sort-order="desc"
-                data-show-export="true"
-                data-url="{{ url_for('frontend.collection_list') }}"
-                data-pagination="true"
-                data-side-pagination="server"
-                data-page-size="100"
-                data-show-refresh="true"
-                data-search="true">
-          <thead>
-            <th data-field="offers_at" data-sortable="true">申购日</th>
-            <th data-field="exchange" data-sortable="true" data-formatter="exchangeFormatter">交易所</th>
-            <th data-field="name" data-sortable="true">藏品名</th>
-            <th data-field="symbol" data-sortable="true">代码</th>
-            <th data-field="offer_price" data-sortable="true" class="text-right">申价</th>
-            <th data-field="offer_quantity" data-sortable="true" class="text-right">申量</th>
-            <th data-field="offer_cash_ratio" data-sortable="true" class="text-right">资金</th>
-            <th data-field="offer_cash" data-sortable="true" class="text-right">市值</th>
-            <th data-field="result_ratio_cash" data-sortable="true" class="text-right">中签率</th>
-            <th data-field="total_increase" data-sortable="true" class="text-right" data-formatter="increaseFormatter">现涨幅</th>
-          </thead>
-          <tbody>
-          </tbody>
-        </table>
-      {% endif %}
     </div>
   </div>
 {% endblock %}
@@ -204,7 +164,6 @@
   {% endif %}
 
     <script>
-      {% if tab == "raw" %}
         function reselect(params){
             if (!params.page){
               params.page = 1;
@@ -215,11 +174,7 @@
             if (params.exchange === undefined && "{{ exchange }}"){
               params.exchange = "{{ exchange }}";
             }
-            {% if tab == 'raw' %}
-            location.href = "{{ url_for('frontend.announcement_raw') }}"+ '?' + $.param(params);
-            {% elif tab == 'collection' %}
-            location.href = "{{ url_for('frontend.announcement_collection') }}"+ '?' + $.param(params);
-            {% endif %}
+            location.href = "{{ url_for('frontend.announcement') }}"+ '?' + $.param(params);
         }
         $('.filter .values li a').on('click', function(){
           var ftype = $(this).data('type');
@@ -233,36 +188,6 @@
         $('.pagination').on('click', 'a', function(){
             reselect({page: $(this).data('page')});
         });
-      {% endif %}
-
-      {% if tab == 'collection' %}
-        function exchangeFormatter(value, row, index) {
-          return '<a href="#" name="exchange" ' +
-            'data-exchange="' + value + '">' + value + '</a>'
-        }
-        function increaseFormatter(value, row, index) {
-          var url = "{{ url_for('frontend.trade') }}" + '?'
-              + $.param({exchange: row.exchange, symbol: row.symbol});
-          if (value) {
-            return '<a href="' + url + '" target="_blank">' + value + '</a>'
-          } else {
-            return '-';
-          }
-        }
-        $('table').on('click', 'a[name=exchange]', function(e) {
-          e.preventDefault();
-          $('.search input').val($(this).data('exchange'));
-          $('.search input').trigger('keyup');
-        });
-
-        var search = "{{ search }}";
-        $(document).ready(function() {  
-          if (search) {
-            $('.search input').val(search);
-            $('.search input').trigger('keyup'); 
-          }
-        })
-      {% endif %}
 
     </script>
 {% endblock %}
