--- a/ybk/templates/navbar.html
+++ b/ybk/templates/navbar.html
@@ -4,9 +4,10 @@
         {'nav': 'index', 'name': '首页', 'url': url_for('frontend.index')},
         {'nav': 'walkthrough', 'name': '开户攻略', 'url': url_for('frontend.walkthrough')},
         {'nav': 'announcement', 'name': '公告信息', 'url': url_for('frontend.announcement')},
+        {'nav': 'trade', 'name': '交易行情', 'url': url_for('frontend.trade')},
+        {'nav': 'collection', 'name': '交易品种', 'url': url_for('frontend.collection')},
         {'nav': 'calendar', 'name': '申购日历', 'url': url_for('frontend.calendar')},
         {'nav': 'analysis', 'name': '中签分析', 'url': url_for('frontend.analysis')},
-        {'nav': 'trade', 'name': '交易行情', 'url': url_for('frontend.trade')},
         {'nav': 'forum', 'name': '论坛交流', 'url': url_for('frontend.forum')},
         {'nav': 'about', 'name': '关于', 'url': url_for('frontend.about')},
         ]
