--- a/ybk/templates/frontend/walkthrough.html
+++ b/ybk/templates/frontend/walkthrough.html
@@ -46,9 +46,9 @@
           <p>大部分交易所都支持身份证以及等效证件，用手机给身份证正反面各拍一张照, 上传到电脑，并且用画图软件打开另存为900x500(或者竖着的500x900)像素的jpg格式文件。</p>
 
 
-          <div class="col-md-12">
+          <!-- <div class="col-md-12">
             <img src="{{ url_for('static', filename='img/painter2.png') }}" class="col-md-offset-2 col-md-8">
-          </div>
+          </div> -->
 
           <p>存成统一格式可以省去多个交易所对图片需求不一致的问题</p>
 
