--- a/ybk/templates/user/login.html
+++ b/ybk/templates/user/login.html
@@ -56,7 +56,7 @@
                     <input type="text" name="mobile" id="mobile" tabindex="1" class="form-control" placeholder="手机号码" value="">
                   </div>
                   <div class="form-group">
-                    <input type="text" name="invited-by" id="invited-by" tabindex="1" class="form-control" placeholder="推荐人手机号码" value="">
+                    <input type="text" name="invited-by" id="invited-by" tabindex="1" class="form-control" placeholder="推荐人手机号码（可加QQ群591417获得）" value="">
                   </div>
                   <div class="form-group">
                     <input type="text" name="username" id="username" tabindex="2" class="form-control" placeholder="用户名" value="">
