--- a/ybk/templates/frontend/announcement.html
+++ b/ybk/templates/frontend/announcement.html
@@ -17,7 +17,7 @@
         <h2>
             公告信息聚合
         </h2> 
-        <p>*每逢整点更新, 上次更新时间 {{ updated_at | bjtime }}</p>
+        <p>*每5分钟更新, 上次更新时间 {{ updated_at | bjtime }}</p>
         <div class="filters">
           <div class="header">
             <span class="title">公告筛选</span> 
