position delete bug

--- a/ybk/templates/user/position.html
+++ b/ybk/templates/user/position.html
@@ -56,9 +56,9 @@
                 data-search="true">
           <thead>
             <tr>
-            <th data-field="exchange">交易所</th>
-            <th data-field="name">藏品名称</th>
-            <th data-field="symbol" data-align="right">藏品代码</th>
+            <th data-field="exchange" data-sortable="true">交易所</th>
+            <th data-field="name" data-sortable="true">藏品名称</th>
+            <th data-field="symbol" data-align="right" data-sortable="true">藏品代码</th>
             <th data-field="avg_buy_price" data-align="right" data-sortable="true">买价</th>
             <th data-field="quantity" data-align="right" data-sortable="true">买量</th>
             <th data-field="latest_price" data-align="right" data-sortable="true">现价</th>
