update walkthrough text

--- a/ybk/templates/frontend/walkthrough.html
+++ b/ybk/templates/frontend/walkthrough.html
@@ -95,11 +95,8 @@
               {% if exchange in ['海西文交所', '中港邮币卡'] %}
                 ①
               {% endif %}
-              {% if exchange in ['上海文交所', '宁夏文交所', '华强文交所'] %}
+              {% if exchange in ['中艺邮币卡', '宁夏文交所', '华强文交所'] %}
                 ②
-              {% endif %}
-              {% if exchange in ['中艺邮币卡', '南昌文交所', '成都文交所', '西部文交所'] %}
-                ③
               {% endif %}
               &nbsp; 
               <a href="{{ guide_url }}" target="_blank">官方指南</a>
@@ -108,8 +105,8 @@
           </ul>
 
           ①. 海西和中港都是周末也有申购并且周日也有交易的交易所，对提升资金效率非常有帮助，推荐一定要申请。<br>
-          ②. 上海、宁夏和华强都是中签率又高，涨势又好的交易所，推荐优先要开通。<br>
-          ③. 这些新所和次新所，中签率也较高。<br>
+          ②. 宁夏、中艺、华强都是中签率又高，涨势又好的交易所，推荐优先要开通。<br>
+          ③. 另外关注新所和次新所，中签率也较高。<br>
         </div>
 
         <div class="step">
